// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createCompileRequest createCompileRequest 1`] = `
{
  "experimental": [],
  "keepRawCase": undefined,
  "maxDepth": undefined,
  "split": undefined,
  "targets": [],
}
`;

exports[`createCompileRequest createCompileRequest 2`] = `
{
  "experimental": [],
  "keepRawCase": undefined,
  "maxDepth": undefined,
  "split": undefined,
  "targets": [
    {
      "compress": false,
      "filename": "words.txt",
      "format": "plaintext",
      "sort": undefined,
      "sources": [
        "src/words.txt",
      ],
      "trieBase": undefined,
    },
  ],
}
`;

exports[`createCompileRequest createCompileRequest 3`] = `
{
  "experimental": [],
  "keepRawCase": undefined,
  "maxDepth": undefined,
  "split": undefined,
  "targets": [
    {
      "compress": false,
      "filename": "out/words.txt",
      "format": "plaintext",
      "sort": undefined,
      "sources": [
        "src/words.txt",
      ],
      "trieBase": undefined,
    },
    {
      "compress": false,
      "filename": "out/cities.txt",
      "format": "plaintext",
      "sort": undefined,
      "sources": [
        "src/cities.txt",
      ],
      "trieBase": undefined,
    },
  ],
}
`;

exports[`createCompileRequest createCompileRequest 4`] = `
{
  "experimental": [],
  "keepRawCase": undefined,
  "maxDepth": undefined,
  "split": undefined,
  "targets": [
    {
      "compress": false,
      "filename": "out/combo.txt",
      "format": "plaintext",
      "sort": undefined,
      "sources": [
        "src/words.txt",
        "src/cities.txt",
      ],
      "trieBase": undefined,
    },
  ],
}
`;
